# Fyragic2d

./: .gitignore  CMakeLists.txt  README.md  freezer-windows.bat
Engine/: Main.cpp
Engine/Core/Components/: TransformComponent.h
Engine/Core/EnginePlugins/Logger/: Log.cpp
Engine/Core/Include/: ECS.h  FyragicEngine.h  GameSystem.h  Log.h
Engine/Core/Systems/: GameSystem.cpp
Engine/Core/Systems/EntityComponentSystem/: ECS.cpp
Engine/Core/Systems/GameSystem/: GameSystem.cpp
Engine/Core/Systems/MovementSystem/: MovementSystem.h
Games/EngineShowcaseGame/: Main.cpp
Source/: Game.cpp  Main.cpp
Source/Include/: Game.hpp
